...
                Modifier.background(colorScheme.background)
                    .fillMaxSize()
                    .testTag("RegisterScaffold"),
            content = { dp ->

...
                  modifier =
                      Modifier.fillMaxSize()
                          .testTag("ContentBox")
                          .background(colorScheme.background)
                          .padding(dp.calculateBottomPadding())) {
...
                                      .graphicsLayer(rotationZ = ANIMATED_BOX_ROTATION)
                                      .background(colorScheme.primary)
                                      .testTag("BoxDecoration"))
                          Column(
                              modifier =
...
                                    style = MaterialTheme.typography.headlineLarge,
                                    color = colorScheme.primary,
                                    modifier = Modifier.testTag("welcomeText"))

                                Spacer(modifier = Modifier.height(screenHeight * 0.01f))
...
                                    style = MaterialTheme.typography.labelSmall,
                                    color = colorScheme.onSecondaryContainer,
                                    modifier = Modifier.testTag("welcomeTextBis"))

                                Spacer(modifier = Modifier.height(screenHeight * 0.02f))
...
                                          label = "First Name",
                                          columnModifier = Modifier.weight(1f),
                                          modifier = Modifier.testTag("firstNameInput"))

                                      CustomTextField(
...
                                          label = "Last Name",
                                          columnModifier = Modifier.weight(1f),
                                          modifier = Modifier.testTag("lastNameInput"))
                                    }

...
                                ) {
                                  QuickFixTextFieldCustom(
                                      modifier = Modifier.testTag("emailInput"),
                                      value = email,
                                      onValueChange = {
...
                                      moveContentHorizontal = screenWidth * 0.02f,
                                      isError = emailError,
                                      errorText = "INVALID EMAIL",
                                      showError = emailError,
                                      showLabel = true,
...
                                ) {
                                  QuickFixTextFieldCustom(
                                      modifier = Modifier.testTag("birthDateInput"),
                                      value = birthDate,
                                      singleLine = false,
...
                                      moveContentHorizontal = screenWidth * 0.02f,
                                      isError = birthDateError,
                                      errorText = "INVALID DATE",
                                      showError = birthDateError,
                                      showLabel = true,
...
                                ) {
                                  QuickFixTextFieldCustom(
                                      modifier = Modifier.testTag("passwordInput"),
                                      value = password,
                                      onValueChange = { password = it },
...

                                  QuickFixTextFieldCustom(
                                      modifier = Modifier.testTag("repeatPasswordInput"),
                                      value = repeatPassword,
                                      onValueChange = { repeatPassword = it },
...
                                        Modifier.fillMaxWidth()
                                            .padding(horizontal = screenWidth * 0.02f)
                                            .testTag("passwordConditions"),
                                    horizontalArrangement = Arrangement.SpaceBetween) {
                                      PasswordConditions(
...
                                      modifier =
                                          Modifier.padding(start = screenWidth * 0.02f)
                                              .testTag("noMatchText"),
                                      textAlign = TextAlign.Start)
                                  Spacer(modifier = Modifier.padding(screenHeight * 0.005f))
...
                                        Modifier.width(screenWidth * 0.85f)
                                            .height(screenHeight * 0.07f)
                                            .testTag("registerButton")
                                            .graphicsLayer(alpha = 1f),
                                    enabled = filledForm && !emailError && !birthDateError)
...
                                          Modifier.padding(bottom = screenHeight * 0.01f)
                                              .requiredWidth(screenWidth * 0.55f)
                                              .testTag("alreadyAccountText"),
                                      textAlign = TextAlign.End)

...
                                      contentPadding = PaddingValues(4.dp),
                                      horizontalArrangement = Arrangement.Start,
                                      modifier = Modifier.testTag("clickableLoginButtonText"))
                                }
                                Spacer(modifier = Modifier.padding(bottom = screenHeight * 0.02f))
...
