...
import androidx.compose.ui.unit.dp

@Composable
fun QuickFixBackButton(onClick: () -> Unit, color: Color, modifier: Modifier = Modifier) {
  IconButton(
      onClick = onClick,
      modifier = modifier.testTag("goBackButton").padding(start = 9.dp, top = 35.dp).size(48.dp)) {
        Icon(
            imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
            contentDescription = "Back",
            tint = color,
            modifier = Modifier.size(45.dp))
      }
...
