...
              onCheckedChange = onCheckedChange,
              colors =
                  CheckboxDefaults.colors(
                      checkedColor = colorScheme.primary,
                      uncheckedColor = colorScheme.tertiary,
                      checkmarkColor = Color.Transparent),
              modifier = modifier.size(10.dp).testTag("checkbox"))
          Spacer(modifier = modifier.width(1.dp))
          Text(
              label,
              style = MaterialTheme.typography.headlineSmall,
              color = colorScheme.onSurface,
              modifier = modifier.testTag("checkBoxInfo"))
...
